--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,6 @@
   --translucent-dark:#908d8b;
   --broun:#b09a81;
   --blue:#1085c5;
-
-
 }
 
 /** FONTS **/
@@ -25,40 +23,160 @@
   src: url(/home/zakirkhunkaev/Desktop/layout-designer-project-58/assets/fonts/Neucha-Regular.ttf);
 }
 
-
-body {
-  font-size: 16px;
-  line-height: 1.6em;
-  color: #2a2626;
-  width: 1440px;
-}
-
-
 /**  HEADLINES **/
 
-h1, h2, h3 {
-  line-height: 1.2em;
-}
-h1 {
-  font-size: 72px;
-}
-h2 {
-  font-size: 60px;
-}
-h3 {
-  font-size: 34px;
+header {
+  position: absolute;
+  width: 1440px;
+  height: 914px;
+  left: 0px;
+  top: 0px;
+  background: var(--light);
 }
 
-/**  SECTION  **/
-section {
-  max-width: 1110px;
-  justify-content: center;
-  align-items: center;
-  padding: 100px 100px;
+.в-программировании {
+position: absolute;
+width: 1138px;
+height: 73.71px;
+left: 165px;
+top: 284.29px;
+
+font-family: 'Neucha';
+font-style: normal;
+font-weight: 400;
+font-size: 72px;
+line-height: 100%;
+/* or 72px */
+
+
+/* Text */
+
+color: #2A2626;
 }
 
+.Когнитивные-искажения {
+position: absolute;
+width: 1138px;
+height: 177.12px;
+left: 165px;
+top: 100px;
+
+font-family: 'Neucha';
+font-style: normal;
+font-weight: 400;
+font-size: 72px;
+line-height: 86px;
+/* or 120% */
 
 
+/* Primary */
 
+color: #FE8A02;
+}
 
+body {
+position: relative;
+width: 1441px;
+height: 7796px;
 
+}
+
+.main-1 {
+  position: absolute;
+width: 1082.81px;
+height: 525px;
+left: 461px;
+top: 55px;
+
+background: url('../images/main.png');
+}
+
+.text-1 {
+position: absolute;
+width: 540px;
+height: 186px;
+left: 735px;
+top: 539px;
+
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+/* or 160% */
+
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-end;
+
+/* Text */
+
+color: #2A2626;
+}
+.text-2 {
+position: absolute;
+width: 540px;
+height: 141px;
+left: 165px;
+top: 543px;
+
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 26px;
+/* or 160% */
+
+display: flex;
+align-items: flex-end;
+
+/* Dark */
+
+color: #2A2626;
+}
+
+.button {
+position: absolute;
+width: 148px;
+height: 49px;
+left: 735px;
+top: 765px;
+
+/* Primary */
+
+background: #FE8A02;
+}
+
+.podrobnee {
+  position: absolute;
+width: 101px;
+height: 26px;
+left: 24px;
+top: 11px;
+
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 160%;
+/* identical to box height, or 26px */
+
+text-transform: uppercase;
+
+/* White */
+
+color: #FFFFFF;
+
+}
+
+.image-1 {
+  position: absolute;
+width: 1440px;
+height: 914px;
+left: 0px;
+top: 0px;
+background: url('../images/background.png');
+opacity: 0.06;
+
+}
