--- a/src/style.css
+++ b/src/style.css
@@ -23,160 +23,126 @@
   src: url(/home/zakirkhunkaev/Desktop/layout-designer-project-58/assets/fonts/Neucha-Regular.ttf);
 }
 
-/**  HEADLINES **/
+body {
+  
+  
+  font-family: 'Open Sans';
+  width: 1440px;
+  height: auto;
+  font-size: 16px;
+  line-height: 1.6em;
+  color: var(--dark);
+}
 
-header {
-  position: absolute;
+section {
+  position: relative;
+  margin: 0 auto;
+  width: 1110px;
+  height: auto;
+  padding: 100px 0 100px 0;
+  
+}
+/** HEADERS **/
+h1, h2, h3 {
+  font-family: 'Neucha';
+  line-height: 1.2em;
+}
+h1 {
+  font-size: 72px;
+}
+h2 {
+  font-size: 60px;
+}
+h3 {
+  font-size: 34px;
+}
+
+.background::before {
+  background-image: url("../images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.06;
+  display: block;
   width: 1440px;
   height: 914px;
-  left: 0px;
-  top: 0px;
-  background: var(--light);
+  
+  content:""
 }
 
-.в-программировании {
-position: absolute;
-width: 1138px;
-height: 73.71px;
-left: 165px;
-top: 284.29px;
-
-font-family: 'Neucha';
-font-style: normal;
-font-weight: 400;
-font-size: 72px;
-line-height: 100%;
-/* or 72px */
-
-
-/* Text */
-
-color: #2A2626;
-}
-
-.Когнитивные-искажения {
-position: absolute;
-width: 1138px;
-height: 177.12px;
-left: 165px;
-top: 100px;
-
-font-family: 'Neucha';
-font-style: normal;
-font-weight: 400;
-font-size: 72px;
-line-height: 86px;
-/* or 120% */
-
-
-/* Primary */
-
-color: #FE8A02;
-}
-
-body {
-position: relative;
-width: 1441px;
-height: 7796px;
-
-}
-
-.main-1 {
+.header-h1 {
   position: absolute;
-width: 1082.81px;
-height: 525px;
-left: 461px;
-top: 55px;
-
-background: url('../images/main.png');
+  top: 55px;
+  width: auto;
+  color: var(--basic);
 }
-
+.header-h1-1 {
+  color: var(--dark);
+}
+.avatar-of-hexlet {
+  position: absolute;
+  height: 525px;
+  top: 55px;
+  right: -270px;
+}
+.col {
+  columns: 2;
+  column-gap: 30px;
+  column-width: auto;
+  
+  
+  
+}
+.margin-top {
+  margin-top: 0;
+  padding-top: 16px;
+}
 .text-1 {
-position: absolute;
-width: 540px;
-height: 186px;
-left: 735px;
-top: 539px;
-
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 26px;
-/* or 160% */
-
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: flex-end;
-
-/* Text */
-
-color: #2A2626;
-}
-.text-2 {
-position: absolute;
-width: 540px;
-height: 141px;
-left: 165px;
-top: 543px;
-
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 26px;
-/* or 160% */
-
-display: flex;
-align-items: flex-end;
-
-/* Dark */
-
-color: #2A2626;
+  position:absolute;
+  top: 539px;
 }
 
-.button {
-position: absolute;
-width: 148px;
-height: 49px;
-left: 735px;
-top: 765px;
-
-/* Primary */
-
-background: #FE8A02;
-}
-
-.podrobnee {
+.btn-main {
   position: absolute;
-width: 101px;
-height: 26px;
-left: 24px;
-top: 11px;
-
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 160%;
-/* identical to box height, or 26px */
-
-text-transform: uppercase;
-
-/* White */
-
-color: #FFFFFF;
+  top: 765px;
+  left: 567px;
+  padding: 12px 24px 12px 24px;
+  font-weight: bold;
+  background-color: var(--basic);
+  color:var(--white);
+  text-decoration: none;
 
 }
+.section-2 {
+  width: 1440px;
+  height: 914px;
+  background: var(--white);
+}
 
-.image-1 {
+.flex {
+  display: flex;
+  justify-content: center;
+}
+.flex-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.Petrova-Channel {
   position: absolute;
-width: 1440px;
-height: 914px;
-left: 0px;
-top: 0px;
-background: url('../images/background.png');
-opacity: 0.06;
+  width: 1110px;
+  height: 26px;
+  left: 165px;
+  top: 310px;
+  font-family: 'Open Sans';
+  text-align: center;
+  color: #212529;
+}
 
+.video {
+  position: absolute;
+  width: 919px;
+  height: 569px;
+  left: 261px;
+  top:329px;
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
