--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,8 +35,20 @@ body {
   line-height: 1.6em;
   color: var(--dark);
   font-family: 'OpenSans-Regular';
-  margin: auto;
+  margin: 0;
 }
+*, *:before,
+*:after {
+  box-sizing: border-box;
+}
+section {
+  margin: 0 auto;
+  padding: 100px 0 100px 0;
+}
+header {
+  display: block;
+}
+
 
 h1, h2, h3 {
   font-family: 'Neucha';
@@ -44,15 +56,17 @@ h1, h2, h3 {
 }
 h1 { font-size: 72px; }
 h2 { font-size: 60px; }
-h3 { font-size: 34px; }
+h3 { font-size: 34px;margin: 0px;}
+
 
 .background-light {
   background-color: var(--light);
 }
-section {
-  width: 1110px;
-  margin: 0 auto;
-  padding: 100px 0 100px 0;
+.bg-white {
+  background-color: var(--white);
+}
+.bg-basic-dark {
+  background-color: var(--basic-dark);
 }
 
 .page-header {
@@ -60,9 +74,7 @@ section {
   z-index: 0;
   overflow: hidden;
 }
-header {
-  display: block;
-}
+
 
 .page-header::before {
   position: absolute;
@@ -81,8 +93,58 @@ header {
 .container {
   position:relative;
   width: 1110px;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
   padding: 100px 0 100px 0; 
+}
+.cards-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 15px;
+}
+.card {
+  padding: 24px;
+  width: 350px;
+  height: 323px;
+  background-color: var(--light);
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  /*margin: 15px;*/
+  color:var(--basic-dark)
+}
+.card h3 {
+  color:var(--basic);
+}
+
+.card-1 {
+  
+width: 350px;
+height: 323px;
+  background-color: var(--basic-dark);
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  /*margin: 15px;*/
+  line-height: 1.2;
+  color:var(--white);
+}
+
+.num-style {
+  padding-bottom: 40px;
+  font-size: 64px;
+  font-family: 'Neucha';
+  line-height: 1;
+  color: var(--basic-dark);
+  text-decoration: none;
+  
+
 }
 .img-main {
   position: absolute;
@@ -100,7 +162,7 @@ header {
   margin-top: 0;
 }
 .margin-bottom-185 {
-  margin-bottom: 185px;
+  margin-bottom: 145px;
 }
 .button-detailed {
   padding: 12px 24px 12px 24px;
@@ -111,6 +173,28 @@ header {
   text-decoration-line: none;
 }
 
-.margin-bottom-40  {
-  margin-top: 40px;
+.padding-bottom-30 {
+  padding-bottom: 30px;
 }
+
+.margin-bottom-40  {
+  margin-bottom: 40px;
+}
+.flex {
+  display: flex;
+ flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.center {
+  text-align: center;
+}
+
+.video {
+  position: relative;
+  top:200px;
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
+}
+
+
