--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -196,5 +196,23 @@ height: 323px;
   top:200px;
   filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
+.flex-row {
+  display: flex;
+  gap: 30px;
+}
+.col-2 {
+  display: flex;
+  flex-direction: column;
+  flex-basis: fit-content;
 
+}
+.col-1 {
+  display: flex;
+  flex-direction: column;
+  flex-basis: fit-content;
+}
 
+#ikea-effect {
+  padding: 100px 0px 100px 0px;
+
+}
