--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,18 +16,18 @@
 @font-face {
   font-weight: 400;
   font-family: 'OpenSans-Regular';
-  src: url('./assets/fonts/OpenSans-Regular.woff2');
+  src: url('../assets/fonts/OpenSans-Regular.woff2');
 }
 @font-face {
   font-weight: 700;
   font-family: 'OpenSans-Bold';
-  src: url('./assets/fonts/OpenSans-Bold.woff2');
+  src: url('../assets/fonts/OpenSans-Bold.woff2');
 }
 
 @font-face {
   font-weight: 400;
   font-family: 'Neucha';
-  src: url('./assets/fonts/Neucha.woff2');
+  src: url('../assets/fonts/Neucha.woff2');
 }
 
 body {
@@ -218,6 +218,9 @@ div.container.margin-top-100.bg-basic-dark {
 }
 .decor-19 {
   color: #007DC1;
+}
+.decor-20 {
+  color: var(--basic);
 }
 
 
