--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -116,6 +116,9 @@ div.container.margin-top-100.bg-basic-dark {
 .center {
   text-align: center;
 }
+.font-weight-400 {
+  font-weight: 400;
+}
 .decor-1 {
   font-family:'Neucha';
   font-size: 52px;
@@ -142,7 +145,8 @@ div.container.margin-top-100.bg-basic-dark {
 .decor-5 {
   color:var(--dark);
   line-height: 72px; 
-  margin-top: 0px
+  margin-top: 0px;
+  font-weight: 400;
 }
 .decor-6 {
   color:var(--dark);
@@ -167,6 +171,7 @@ div.container.margin-top-100.bg-basic-dark {
   color:#ffffff;
   margin-bottom: 30px; 
   margin-top:0px;
+  font-weight: 400;
 }
 .decor-10 {
   font-family: 'Neucha';
@@ -233,8 +238,6 @@ div.container.margin-top-100.bg-basic-dark {
 
 
 
-
-
 .page-header {
   position: relative;
   z-index: 0;
@@ -249,7 +252,7 @@ div.container.margin-top-100.bg-basic-dark {
   z-index: -20;
   width: 100%;
   height: 100%;
-  background: url('../../images/background.png');
+  background: url('../images/background.png');
   display: block;
   opacity: 0.1;
   background-repeat: no-repeat;
