delete padding on 1 section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -362,11 +362,12 @@ height: 323px;
   flex-direction: column;
   flex-basis: fit-content;
 }
-
+/*
 #ikea-effect {
   padding: 100px 0px 100px 0px;
 
 }
+*/
 input{
   display: block;
   width: 423px;
