--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -99,10 +99,14 @@ div.container.margin-top-100.bg-basic-dark {
 .padding-bottom-30 {
   padding-bottom: 30px;
 }
-.padding-6-4-10 {
+.padding-6-10 {
   padding-top: 6px;
   padding-left: 10px;
-  padding-bottom: 4px;
+}
+
+.padding-bottom0-margin-bottom-100 {
+  padding-bottom: 0;
+  margin-bottom: 100px;
 }
 .padding-55 {
   padding:55px;
