--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -361,8 +361,8 @@ height: 323px;
 }
 
 
-.video {
-  position: relative;
+.video-filter {
+  
 
   filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
