--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -360,11 +360,11 @@ height: 323px;
   align-items: center;
 }
 
-
+/*
 .video-filter {
   
   filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
-}
+}*/
 
 
 .flex-row {
