--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,7 +45,7 @@ body {
   box-sizing: border-box;
 }
 
- section {
+section {
   margin: 0 auto;
 }
 
@@ -55,16 +55,19 @@ header {
 
 h1,
 h2,
-h3 { 
-  font-family: 'Neucha';
+h3 {
+  font-family: "Neucha", sans-serif;
   line-height: 1.2em;
 }
 
-h1 { 
+h1 {
   font-size: 72px;
 }
 
-h2 { font-size: 60px; }
+h2 {
+  font-size: 60px;
+}
+
 h3 { 
   font-size: 34px;
   margin: 0px;
@@ -75,7 +78,7 @@ img {
   vertical-align: middle;
 }
 
-/*DESIGN STYLES*/
+/* DESIGN STYLES */
 
 .background-light {
   background-color: var(--light);
@@ -113,7 +116,7 @@ div.container.margin-top-100.bg-basic-dark {
 .num-style {
   padding-bottom: 40px;
   font-size: 64px;
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   line-height: 1;
   color: var(--basic-dark);
   text-decoration: none;
@@ -134,7 +137,7 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .padding-55 {
-  padding:55px;
+  padding: 55px;
 }
 
 .padding-top-100 {
@@ -173,13 +176,12 @@ div.container.margin-top-100.bg-basic-dark {
 .decor-1 {
   font-family: Neucha;
   font-size: 52px;
-  color: var(--white);
   text-decoration: none;
-  color:var(--basic)
+  color: var(--basic);
 }
 
 .decor-2 {
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   font-size: 50px;
   color: var(--white);
 }
@@ -189,17 +191,17 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .decor-4 {
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   font-size: 24px;
   line-height: 29px;
   color: #908d8d;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 .decor-5 {
-  color:var(--dark);
+  color: var(--dark);
   line-height: 72px; 
-  margin-top: 0px;
+  margin-top: 0;
   font-weight: 400;
 }
 
@@ -210,7 +212,7 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .decor-7 {
-  font-family: OpenSans-Regular;
+  font-family: OpenSans-Regular, sans-serif;
   color: var(--white); 
   background: #b09a81; 
   margin-top: 100px; 
@@ -218,11 +220,11 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .decor-8 {
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   font-size: 24px;
   line-height: 29px;
   color:#d7ccc0; 
-  margin: 0px
+  margin: 0;
 }
 
 .decor-9 {
@@ -234,14 +236,14 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .decor-10 {
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   font-size: 34px; 
   color: #ffffff; 
   line-height: 120%;
 }
 
 .decor-11 {
-  font-family: OpenSans-Regular;
+  font-family: OpenSans-Regular, sans-serif;
   color: var(--brown); 
   background: var(--white); 
   margin-top: 100px; 
@@ -249,7 +251,7 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .decor-11-1 {
-  font-family: OpenSans-Regular;
+  font-family: OpenSans-Regular, sans-serif;
   color: var(--brown); 
   background: var(--white); 
   margin-top: 100px; 
@@ -261,19 +263,19 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .decor-13 {
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   font-size: 24px; 
   line-height: 29px;
   color:#d7ccc0; 
-  margin: 0px;
+  margin: 0;
 }
 
 .decor-14 {
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   font-size: 24px; 
   line-height: 29px;
   color: #908d8d; 
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 .decor-15 {
@@ -286,19 +288,19 @@ div.container.margin-top-100.bg-basic-dark {
 
 .decor-17 {
   font-size: 12px;
-  color: #ffffff;
+  color: #fff;
   line-height: 1.6;
   align-items: center;
 }
 
 .decor-18 {
-  color: #000000; 
+  color: #000; 
   text-align: center; 
   font-size: 14px;
 }
 
 .decor-19 {
-  color: #007DC1;
+  color: #007dc1;
 }
 
 .decor-20 {
@@ -318,12 +320,12 @@ div.container.margin-top-100.bg-basic-dark {
   z-index: -20;
   width: 100%;
   height: 100%;
-  background: url('../images/background.png');
+  background: url("../images/background.png");
   display: block;
   opacity: 0.1;
   background-repeat: no-repeat;
   background-size: cover;
-  content: '';
+  content: "";
 }
 
 .container {
@@ -331,12 +333,12 @@ div.container.margin-top-100.bg-basic-dark {
   width: 1110px;
   margin-right: auto;
   margin-left: auto;
-  padding: 100px 0 100px 0; 
+  padding: 100px 0; 
 }
 
 .cards-container {
   display: flex;
-  flex-direction: row;
+  flex-flow: row;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 15px;
@@ -354,8 +356,9 @@ div.container.margin-top-100.bg-basic-dark {
   align-content: center;
   justify-content: space-evenly;
   align-items: flex-start;
-  /*margin: 15px;*/
-  color: var(--basic-dark)
+
+  /* margin: 15px; */
+  color: var(--basic-dark);
 }
 
 .card-1 {
@@ -365,7 +368,8 @@ div.container.margin-top-100.bg-basic-dark {
   text-decoration: none;
   display: flex;
   flex-wrap: wrap;
-  /*margin: 15px;*/
+
+  /* margin: 15px; */
   line-height: 1.2;
   color: var(--white);
 }
@@ -384,7 +388,7 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .button-detailed {
-  padding: 12px 24px 12px 24px;
+  padding: 12px 24px;
   font-weight: 700;
   background-color: var(--basic);
   list-style-type: none;
@@ -394,13 +398,13 @@ div.container.margin-top-100.bg-basic-dark {
 
 .flex {
   display: flex;
- flex-direction: column;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .video-filter {
-  filter: drop-shadow( 0 16px 32px rgba(0 0 0 / 15%) );
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
 
 .flex-row {
@@ -425,6 +429,7 @@ div.container.margin-top-100.bg-basic-dark {
   flex-direction: column;
   flex-basis: fit-content;
 }
+
 /*
 #ikea-effect {
   padding: 100px 0px 100px 0px;
@@ -435,14 +440,14 @@ input {
   display: block;
   width: 423px;
   height: 50px;
-  padding: 15px
+  padding: 15px;
 }
 
 button {
   display: flex;
   justify-content: center;
   align-items: center;
-  position:relative;
+  position: relative;
   height: 50px;
   width: 70px;
   background-color: #fe8a02;
@@ -451,31 +456,31 @@ button {
 
 button::before {
   position: absolute;
-  background-image: url('../../images/send.svg');
+  background-image: url("../../images/send.svg");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
   vertical-align: middle;
   width: 20px;
   height: 20px;
-  content: '';
+  content: "";
 }
 
 .hover:hover {
-  color: #FFFFFF;
-  background: #EA7600;
+  color: #fff;
+  background: #ea7600;
 }
 
 .hover:hover h3 {
-  color: #FFFFFF;
-  background: #EA7600;
+  color: #fff;
+  background: #ea7600;
 }
 
 .hover:hover .num-style{
-  color: #FFFFFF;
-  background: #EA7600;
+  color: #fff;
+  background: #ea7600;
 }
 
 .img-filter {
-  filter: drop-shadow(0px 16px 32px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(0px 16px 32px rgba(0, 0, 0, 15%));
 }
