--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -352,7 +352,7 @@ div.container.margin-top-100.bg-basic-dark {
   text-decoration: none;
   display: flex;
   flex-direction: column;
-  flex-flow: nowrap;
+  flex-wrap: nowrap;
   align-content: center;
   justify-content: space-evenly;
   align-items: flex-start;
@@ -482,5 +482,5 @@ button::before {
 }
 
 .img-filter {
-  filter: drop-shadow(0 16px 32px rgba(0 0 0 15%));
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 15%));
 }
