--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -532,10 +532,10 @@ button::before {
   filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
 }
 
-#padding-bottom-0 {
-  padding-bottom: 0;
-}
-
 .height-348 {
   height: 348px;
+}
+
+.padding-bottom-0 {
+  padding-bottom: 0;
 }
